[Bounding volume visualisation]
Began work for creating collision volumes. BoxVolume can be made, and a matching CollisionRenderer component has been created that can render the box volume.
Later will be extended to render different volumes.

Point intersection can be checked for but early out methods and rotated volumes cannot be checked against yet.

--- a/renderframework-opengl/renderframework-opengl/renderframework-opengl.vcxproj
+++ b/renderframework-opengl/renderframework-opengl/renderframework-opengl.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="TransformVisualiser.cpp" />
     <ClCompile Include="UIRenderComponent.cpp" />
     <ClCompile Include="UpdateableComponent.cpp" />
+    <ClCompile Include="VolumeVisualiser.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BoundingVolume.h" />
@@ -203,6 +204,7 @@
     <ClInclude Include="TransformVisualiser.h" />
     <ClInclude Include="UIRenderComponent.h" />
     <ClInclude Include="UpdateableComponent.h" />
+    <ClInclude Include="VolumeVisualiser.h" />
   </ItemGroup>
   <ItemGroup>
     <CopyFileToFolders Include="..\..\..\..\..\..\..\devlibs\opengl-libs\libs\freetype.dll">
