[Vertex Array Object class]
Began refactoring process for the rendering of meshes and other primitives.
Created a class to handle creation of buffers and setting up the vertex attributes.
Needs to have the ability to let the buffer be easily modifiable.
Should also keep track of the current VBO and EBO, while allowing for multiple buffers and having an interface to let the user choose a buffer, and modify it.
Error handling for the buffer's size should be checked when data copy is requested and glBufferData should be called again to allow for the correction.

--- a/renderframework-opengl/renderframework-opengl/renderframework-opengl.vcxproj
+++ b/renderframework-opengl/renderframework-opengl/renderframework-opengl.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="TransformVisualiser.cpp" />
     <ClCompile Include="UIRenderComponent.cpp" />
     <ClCompile Include="UpdateableComponent.cpp" />
+    <ClCompile Include="VertexArrayObject.cpp" />
     <ClCompile Include="VolumeVisualiser.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -204,6 +205,7 @@
     <ClInclude Include="TransformVisualiser.h" />
     <ClInclude Include="UIRenderComponent.h" />
     <ClInclude Include="UpdateableComponent.h" />
+    <ClInclude Include="VertexArrayObject.h" />
     <ClInclude Include="VolumeVisualiser.h" />
   </ItemGroup>
   <ItemGroup>
