--- a/renderframework-opengl/renderframework-opengl/renderframework-opengl.vcxproj
+++ b/renderframework-opengl/renderframework-opengl/renderframework-opengl.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Material.cpp" />
     <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="MeshRendererComponent.cpp" />
     <ClCompile Include="Object.cpp" />
     <ClCompile Include="ObjectAllocator.cpp" />
     <ClCompile Include="OpenGLLoader.cpp" />
@@ -185,6 +186,7 @@
     <ClInclude Include="Line.h" />
     <ClInclude Include="Material.h" />
     <ClInclude Include="Mesh.h" />
+    <ClInclude Include="MeshRendererComponent.h" />
     <ClInclude Include="Object.h" />
     <ClInclude Include="ObjectAllocator.h" />
     <ClInclude Include="OpenGLLoader.h" />
